Validation işlemleri eklendi

--- a/MyBlog.UI/Views/Home/Intro.cshtml
+++ b/MyBlog.UI/Views/Home/Intro.cshtml
@@ -22,8 +22,8 @@
 	</div> <!-- /intro-content -->
 
 	<ul class="intro-social">
-		<li><a href="#"><i><img style="max-width: 40px;" src="~/images/github-mark-ea2971cee799.png" /></i></a></li>
-        <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
+		<li><a href="#"><i><img style="max-width: 40px;" src="~/images/github-mark-white.png" /></i></a></li>
+		<li><a href="#"><i><img style="max-width: 40px;" src="~/images/LI-In-Bug.png" /></i></a></li>
 		<li><a href="#"><i><img style="max-width: 40px;" src="~/images/instagram.png" /></i></a></li>
 	</ul> <!-- /intro-social -->
 
