--- a/MyBlog.UI/Views/Home/Index.cshtml
+++ b/MyBlog.UI/Views/Home/Index.cshtml
@@ -14,7 +14,7 @@
 <body id="top">
 
 	@await Html.PartialAsync("Intro")
-	@await Html.PartialAsync("Contact")
+	@await Html.PartialAsync("About")
 @* 	@await Html.PartialAsync("Resume")
  *@	@await Html.PartialAsync("Portfolio")
 	@await Html.PartialAsync("Service")
