--- a/MyBlog.UI/Areas/Admin/Views/AdminHome/Index.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/AdminHome/Index.cshtml
@@ -4,5 +4,49 @@
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
 }
 
-<h1>Deneme</h1>
-
+    <div class="h-100 bg-secondary rounded p-4">
+        <div>
+            <h6 class="mb-0">Messages</h6>
+            <a href="">Show All</a>
+        </div>
+        <div class="d-flex align-items-center border-bottom py-3">
+            <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <div class="w-100 ms-3">
+                <div class="d-flex w-100 justify-content-between">
+                    <h6 class="mb-0">Jhon Doe</h6>
+                    <small>15 minutes ago</small>
+                </div>
+                <span>Short message goes here...</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-center border-bottom py-3">
+            <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <div class="w-100 ms-3">
+                <div class="d-flex w-100 justify-content-between">
+                    <h6 class="mb-0">Jhon Doe</h6>
+                    <small>15 minutes ago</small>
+                </div>
+                <span>Short message goes here...</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-center border-bottom py-3">
+            <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <div class="w-100 ms-3">
+                <div class="d-flex w-100 justify-content-between">
+                    <h6 class="mb-0">Jhon Doe</h6>
+                    <small>15 minutes ago</small>
+                </div>
+                <span>Short message goes here...</span>
+            </div>
+        </div>
+        <div class="d-flex align-items-center pt-3">
+            <img class="rounded-circle flex-shrink-0" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
+            <div class="w-100 ms-3">
+                <div class="d-flex w-100 justify-content-between">
+                    <h6 class="mb-0">Jhon Doe</h6>
+                    <small>15 minutes ago</small>
+                </div>
+                <span>Short message goes here...</span>
+            </div>
+        </div>
+    </div>
