--- a/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -23,6 +23,7 @@
     <!-- Libraries Stylesheet -->
     <link href="~/admin/lib/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
     <link href="~/admin/lib/tempusdominus/css/tempusdominus-bootstrap-4.min.css" rel="stylesheet" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
 
     <!-- Customized Bootstrap Stylesheet -->
     <link href="~/admin/css/bootstrap.min.css" rel="stylesheet">
