--- a/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -48,27 +48,17 @@
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
-                <a href="index.html" class="navbar-brand mx-4 mb-3">
-                    <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>My Blog Admin</h3>
+                <a href="/Admin/Contact" class="navbar-brand mx-4 mb-3">
+                    <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>MyBlog</h3>
                 </a>
                 
                 <div class="navbar-nav w-100">
-                    <a href="index.html" class="nav-item nav-link"><i class="fa fa-tachometer-alt me-2"></i>Panel</a>
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-user me-2"></i>Hakkımda</a>
-
-                    <a href="widget.html" class="nav-item nav-link"><i class="fa fa-th me-2"></i>Intro</a>
-                    <a href="form.html" class="nav-item nav-link"><i class="fa fa-briefcase me-2"></i>Portföy</a>
-                    <a href="table.html" class="nav-item nav-link"><i class="fa fa-star me-2"></i>Yetenekler</a>
-                    <a href="chart.html" class="nav-item nav-link"><i class="fa fa-camera-retro me-2"></i>Sosyal Medya</a>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown"><i class="far fa-file-alt me-2"></i>Pages</a>
-                        <div class="dropdown-menu bg-transparent border-0">
-                            <a href="signin.html" class="dropdown-item">Sign In</a>
-                            <a href="signup.html" class="dropdown-item">Sign Up</a>
-                            <a href="404.html" class="dropdown-item">404 Error</a>
-                            <a href="blank.html" class="dropdown-item">Blank Page</a>
-                        </div>
-                    </div>
+                    <a href="/Admin/Contact" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Mesajlar</a>
+                    <a href="/Admin/About" class="nav-item nav-link"><i class="fa fa-user me-2"></i>Hakkımda</a>
+                    <a href="/Admin/Portfolio" class="nav-item nav-link"><i class="fa fa-briefcase me-2"></i>Portföy</a>
+                    <a href="/Admin/Skills" class="nav-item nav-link"><i class="fa fa-star me-2"></i>Yetenekler</a>
+                    <a href="/Admin/Social" class="nav-item nav-link"><i class="fa fa-camera-retro me-2"></i>Sosyal Medya</a>
+                    
                 </div>
             </nav>
         </div>
@@ -92,7 +82,7 @@
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <i class="fa fa-envelope me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Message</span>
+                            <span class="d-none d-lg-inline-flex">Mesajlar</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">
@@ -128,30 +118,7 @@
                             <a href="#" class="dropdown-item text-center">See all message</a>
                         </div>
                     </div>
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-bell me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Notificatin</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Profile updated</h6>
-                                <small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">New user added</h6>
-                                <small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <h6 class="fw-normal mb-0">Password changed</h6>
-                                <small>15 minutes ago</small>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item text-center">See all notifications</a>
-                        </div>
-                    </div>
+                    
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
