--- a/MyBlog.UI/Views/Shared/Components/About/Default.cshtml
+++ b/MyBlog.UI/Views/Shared/Components/About/Default.cshtml
@@ -68,7 +68,7 @@
 	<div class="row button-section">
 		<div class="col-twelve">
 			<a href="#contact" title="Hire Me" class="button stroke smoothscroll">Bana Ulaş</a>
-			<a href="#" title="Download CV" class="button button-primary">CV (PDF)</a>
+			<a href="~/Hakan Ceylan.pdf" target="_blank" title="Download CV" class="button button-primary">CV (PDF)</a>
 		</div>
 	</div>
 
