--- a/MyBlog.UI/wwwroot/admin/css/style.css
+++ b/MyBlog.UI/wwwroot/admin/css/style.css
@@ -14,6 +14,15 @@
     z-index: 99;
 }
 
+/*404 Page css*/
+.error-hakagn-container {
+    width: 100%;
+    height: 100svh;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 
 /*** Spinner ***/
 #spinner {
