Mesajlar layouta çekildi

--- a/MyBlog.UI/Views/Home/Contact.cshtml
+++ b/MyBlog.UI/Views/Home/Contact.cshtml
@@ -1,4 +1,5 @@
-﻿<section id="contact">
+﻿<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<section id="contact">
 
 	<div class="row section-intro">
 		<div class="col-twelve">
@@ -58,7 +59,8 @@
 		</div> <!-- /col-twelve -->
 
 	</div> <!-- /contact-form -->
-
+    
 	 <!-- /contact-info -->
 
 </section>
+
