--- a/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,8 +14,8 @@
     <!-- Google Web Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet"> 
-    
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;600&family=Roboto:wght@500;700&display=swap" rel="stylesheet">
+
     <!-- Icon Font Stylesheet -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.1/font/bootstrap-icons.css" rel="stylesheet">
@@ -43,28 +43,24 @@
             </div>
         </div>
         <!-- Spinner End -->
-
-
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
             <nav class="navbar bg-secondary navbar-dark">
                 <a href="/Admin/Contact" class="navbar-brand mx-4 mb-3">
                     <h3 class="text-primary"><i class="fa fa-user-edit me-2"></i>MyBlog</h3>
                 </a>
-                
+
                 <div class="navbar-nav w-100">
                     <a href="/Admin/Contact" class="nav-item nav-link"><i class="fa fa-envelope me-2"></i>Mesajlar</a>
                     <a href="/Admin/About" class="nav-item nav-link"><i class="fa fa-user me-2"></i>Hakkımda</a>
                     <a href="/Admin/Portfolio" class="nav-item nav-link"><i class="fa fa-briefcase me-2"></i>Portföy</a>
                     <a href="/Admin/Skills" class="nav-item nav-link"><i class="fa fa-star me-2"></i>Yetenekler</a>
                     <a href="/Admin/Social" class="nav-item nav-link"><i class="fa fa-camera-retro me-2"></i>Sosyal Medya</a>
-                    
+
                 </div>
             </nav>
         </div>
         <!-- Sidebar End -->
-
-
         <!-- Content Start -->
         <div class="content">
             <!-- Navbar Start -->
@@ -79,46 +75,9 @@
                     <input class="form-control bg-dark border-0" type="search" placeholder="Search">
                 </form>
                 <div class="navbar-nav align-items-center ms-auto">
-                    <div class="nav-item dropdown">
-                        <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            <i class="fa fa-envelope me-lg-2"></i>
-                            <span class="d-none d-lg-inline-flex">Mesajlar</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
-                            <a href="#" class="dropdown-item">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                                    <div class="ms-2">
-                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
-                                        <small>15 minutes ago</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                                    <div class="ms-2">
-                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
-                                        <small>15 minutes ago</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item">
-                                <div class="d-flex align-items-center">
-                                    <img class="rounded-circle" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
-                                    <div class="ms-2">
-                                        <h6 class="fw-normal mb-0">Jhon send you a message</h6>
-                                        <small>15 minutes ago</small>
-                                    </div>
-                                </div>
-                            </a>
-                            <hr class="dropdown-divider">
-                            <a href="#" class="dropdown-item text-center">See all message</a>
-                        </div>
-                    </div>
-                    
+                    @await Component.InvokeAsync("Message")
+
+
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
                             <img class="rounded-circle me-lg-2" src="img/user.jpg" alt="" style="width: 40px; height: 40px;">
@@ -127,17 +86,15 @@
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
                             <a href="#" class="dropdown-item">Settings</a>
-                            <a href="#" class="dropdown-item">Log Out</a>
+                            <a  id="logout" class="dropdown-item " style="cursor:p">Log Out</a>
                         </div>
                     </div>
                 </div>
             </nav>
             <!-- Navbar End -->
-
-
             <!-- Blank Start -->
             <div class="container-fluid pt-4 px-4">
-                    @RenderBody()
+                @RenderBody()
             </div>
             <!-- Blank End -->
 
@@ -145,8 +102,6 @@
 
         </div>
         <!-- Content End -->
-
-
         <!-- Back to Top -->
         <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
@@ -164,6 +119,21 @@
 
     <!-- Template Javascript -->
     <script src="~/admin/js/main.js"></script>
+    <script>
+        $(document).ready(function () {
+            $("#logout").click(function () {
+                // AJAX POST isteği gönder
+                $.ajax({
+                    url: "/Logout",
+                    type: "POST",
+                    contentType: "application/json",
+                    success: function (response) {
+                        window.location.href = '/login';
+                    }
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
