mesajlar da okundu okunmadı işlemlerine göre yapıldı tarihe göre geliyor

--- a/MyBlog.UI/Areas/Admin/Views/About/About.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/About/About.cshtml
@@ -31,7 +31,7 @@
                 <label for="floatingInput">Alan(ör: Back-end - Front-end)</label>
             </div>
             <div class="form-floating mb-3">
-                <input name="Mail" type="email" class="form-control" id="Mail" placeholder="Mail" value="@Model.Data.Mail" required>
+                <input name="Mail" type="email" class="form-control" id="Mail1" placeholder="Mail" value="@Model.Data.Mail" required>
                 <label for="floatingInput">Mail Adresi</label>
             </div>
             <div class="mb-3">
@@ -89,7 +89,7 @@
                 NameSurname: $("#NameSurname").val(),
                 BirthDate: $("#BirthDate").val(),
                 Job: $("#Job").val(),
-                Mail: $("#Mail").val(),
+                Mail: $("#Mail1").val(),
                 Photo: $("#Photo").val(),
                 Resume: $("#Resume").val()
             };
