--- a/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Portfolio/Portfolio.cshtml
@@ -1,6 +1,6 @@
 ﻿﻿@using MyBlog.Entity.DTO.PortfolioDTO
 @using MyBlog.Entity.Result
-@model UIResponse<List<PortfolioGetDTO>>
+@model UIResponse<IEnumerable<PortfolioGetDTO>>
 @{
     ViewData["Title"] = "Portfolio";
     Layout = "~/Areas/Admin/Views/Shared/_Layout.cshtml";
