--- a/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MyBlog.UI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -86,16 +86,16 @@
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
                             <a href="#" class="dropdown-item">My Profile</a>
                             <a href="#" class="dropdown-item">Settings</a>
-                            <a  id="logout" class="dropdown-item " style="cursor:p">Log Out</a>
+                            <a  id="logout" class="dropdown-item " style="cursor:pointer">Log Out</a>
                         </div>
                     </div>
                 </div>
             </nav>
-            <div class="modal fade" id="staticBackdropMessage" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+            <div class="modal fade" id="staticBackdropMessage" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="staticBackdropLabel1" aria-hidden="true">
                 <div class="modal-dialog ">
                     <div class="modal-content">
                         <div class="modal-header bg-secondary">
-                            <h2 class="modal-title fs-5" id="staticBackdropLabel"></h2>
+                            <h2 class="modal-title fs-5" id="staticBackdropLabel1"></h2>
                             <button type="button" class="btn btn-outline-success" data-bs-dismiss="modal" id="isRead" aria-label="Close">X</button>
                         </div>
                         <input autocomplete="off" hidden name="Id" type="text" class="form-control" id="Id" placeholder="İsim" style="background:black;" readonly>
@@ -122,7 +122,7 @@
                         </div>
                         <div class="modal-footer bg-secondary">
 
-                            <button type="button" id="isRead" class="btn btn-outline-danger" data-bs-dismiss="modal">İptal</button>
+                            <button type="button" id="isRead1" class="btn btn-outline-danger" data-bs-dismiss="modal">İptal</button>
                         </div>
                     </div>
                 </div>
