--- a/MyBlog.UI/Views/Home/Contact.cshtml
+++ b/MyBlog.UI/Views/Home/Contact.cshtml
@@ -33,7 +33,7 @@
 						<textarea name="contactMessage" id="Message" placeholder="Mesaj" rows="10" cols="50" required></textarea>
 					</div>
 					<div class="form-field">
-						<button id="update" class="submitform">Gönder</button>
+						<button id="update1" class="submitform">Gönder</button>
 						<div id="submit-loader">
 							<div class="text-loader">Gönderiliyor...</div>
 							<div class="s-loader">
